corrected overflowing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    height: 200vh;
+    min-height: 100vh;
     background-color: #fff;
 }
 
@@ -189,6 +189,10 @@ html {
   scrollbar-width: none;      /* Firefox */
 }
 
-#mobileMenu, html, body{
+html, body{
   overflow-x: hidden;
+}
+
+#mobileMenu {
+    overflow-y: auto;
 }
